--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/core": "^6.4.3",
-    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/core": "^6.4.5",
+    "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
