--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,5 +47,8 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+        
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
     }
 }
